...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basket_recycler" />

    <Button
        android:id="@+id/finalizar_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_drawable"
        android:paddingHorizontal="5dp"
        android:paddingVertical="4dp"
        android:text="@string/realizar_compra"
...
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_total_textview"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/cancelar_compra_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:background="@drawable/login_button_drawable"
        android:paddingHorizontal="5dp"
        android:paddingVertical="4dp"
...
