...
    <string name="haz_login"><u>INTRODUCE NOMBRE Y CONTRASENA</u></string>
    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="change_user_data">Mis Datos</string>
    <string name="new_user">Registrar Usuario</string>
    <string name="admin_users">Administrar Usuarios</string>
    <string name="see_last_order">Mi Ultimo Pedido</string>
    <string name="admin_orders">Administrar Pedidos</string>
    <string name="admin_products"><u>Administrar Productos</u></string>
    <string name="admin_products_caps"><u>ADMINISTRAR PRODUCTOS</u></string>
    <string name="basket">Cesta</string>
    <string name="logout">Logout</string>
    <string name="dialog_message">Quieres salir de verdad?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="new_order">Crear Pedido Nuevo</string>
    <string name="aceptar">ACEPTAR CAMBIOS</string>
...
