...
             android:background="@drawable/recycler_drawable"
             android:layout_marginTop="64dp"
             android:paddingHorizontal="8dp"
             android:paddingVertical="10dp"
             android:layout_marginHorizontal="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/order_again_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView5"
             app:layout_constraintVertical_bias="0.0" />

...
             app:layout_constraintHorizontal_bias="0.067"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/paid_price_text_view"
             app:layout_constraintVertical_bias="0.096" />

         <Button
             android:id="@+id/dont_order_again_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/login_button_drawable"
             android:paddingHorizontal="4dp"
             android:paddingVertical="2dp"
             android:text="@string/volver_no_pedir_de_nuevo"
...
