...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haz_login"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/cif_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...

    <TextView
        android:id="@+id/pregunta_recuperacion_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/password_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...

    <EditText
        android:id="@+id/respuesta_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/escriba_codigo_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintTop_toBottomOf="@+id/cif_edittext" />
    <EditText
        android:id="@+id/escriba_codigo_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/olvido_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:elevation="4dp"
        android:linksClickable="true"
        android:text="@string/olvide_contrasena_string"
        android:textColor="@color/black"
        android:textSize="16sp"
...
        app:layout_constraintTop_toBottomOf="@+id/password_edittext" />
    <Button
        android:id="@+id/aceptar_codigo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintVertical_bias="0.085" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/boton_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintVertical_bias="0.085" />
    <Button
        android:id="@+id/boton_aceptar_respuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/cancelar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/escriba_nuevo_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/escriba_nuevo_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/repita_nuevo_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/repita_nuevo_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/boton_cambio_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
