<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/intro_image_view"
        android:background="@color/splashBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pescaderia_logo"/>
</androidx.constraintlayout.widget.ConstraintLayout>